# beamwalk

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  environment.yml  pyproject.toml  setup.cfg  versioneer.py
.github/workflows/: python-publish.yml
beamwalk/: __init__.py  _version.py  backends.py  coupling.py  gui.py  monitor.py  quicklook.py
beamwalk/ui/: main_window.ui
