[metadata]
name = beamwalk
description = Helper program for launching laser light into optical fibers
url = https://github.com/bleykauf/beamwalk
author = Bastian Leykauf
author_email = leykauf@physik.hu-berlin.de
maintainer = Bastian Leykauf
maintainer_email = leykauf@physik.hu-berlin.de
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Intended Audience :: Science/Research

[options]
python_requires = >= 3.6
setup_requires =
    setuptools >= 38.3.0
install_requires =
    pyvisa
    pyvisa-py
    thorlabspm100
    click
    numpy
    matplotlib
    ballpark
    pandas
packages = find:

[options.entry_points]
console_scripts = 
    beamwalk= beamwalk.monitor:run

[versioneer]
VCS = git
style = pep440
versionfile_source = beamwalk/_version.py
versionfile_build = beamwalk/_version.py
tag_prefix =
parentdir_prefix = beamwalk-

[flake8]
docstring-convention = numpy
per-file-ignores =
    tests/*: D103, D100
exclude = beamwalk/_version.py
max-line-length = 88
extend-ignore = E203
